apdate html, css
добавив Секцію "Продукт", виправив помилки синтаксису в css

--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,8 @@ body{
     border-radius: 8px;
     background-color: rgb(218, 255, 247);
     color: black;
-    paddi
+    padding: 20px;
+}
 .home__reklama-text{
     line-height: 28px;
     border: 1px solid rgb(48, 48, 48, 0.6);
